--- a/pom.xml
+++ b/pom.xml
@@ -22,7 +22,7 @@
             <uniqueVersion>false</uniqueVersion>
             <id>corp1</id>
             <name>Corporate Repository</name>
-            <url>scp://repo/maven2</url>
+            <url>http://localhost:9090/reborsa/</url>
             <layout>default</layout>
         </repository>
     </distributionManagement>
